tests/snapshots/rust-1.49.0/acceptance__async_tests.snap
---
source: tests/integration_tests.rs
assertion_line: 70
expression: output
---
running 2 tests
test result: ok. 2 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out
test test_cases::works_seamlessly_with_async_std::_100i32_expects_100usize ... ok
test test_cases::works_seamlessly_with_tokio::_100i32_expects_100usize ... ok
